BasicResponseDto 제네릭 형으로 만들어서 Response 형을 단일화 함.